--- a/client/src/component/Admin/admindash.css
+++ b/client/src/component/Admin/admindash.css
@@ -1,8 +1,51 @@
-.slow-moves {
-    transition: 0.3s;
-  }
-  
-  .sidebar-inactive {
-    transform: translateX(-100%);
-  }
-  
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap");
+
+body {
+    background-color: #e0e3e8;
+    font-family: "Rubik", sans-serif;
+}
+
+.navbar{
+  border-radius: 5px;
+}
+
+.sidebar-overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    transition: 0.5s;
+    opacity: 0;
+    visibility: hidden;
+}
+.sidebar-overlay.active{
+    opacity: 1;
+    visibility: visible;
+}
+.sd-body{
+    padding: 15px;
+    max-height: calc(100vh - 67px);
+    overflow-x: hidden;
+}
+.sd-body ul{
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 0;
+    padding: 0;
+}
+.sd-body ul li{
+    list-style: none;
+    margin-bottom: 8px;
+}
+.sd-body ul li .sd-link{
+    display: inline-block;
+    width: 100%;
+    padding: 10px 16px;
+    /* color: #475f7b; */
+    /* background-color: #e5e8ec; */
+    border-radius: 4px;
+    cursor: pointer;
+    text-decoration: none;
+}
