--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,27 @@
-body{
-    
-}
+.pdf-container {
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%; /* maintain 1:1 aspect ratio */
+    position: relative;
+  }
+  
+  .pdf-container > * {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  @media (min-width: 640px) {
+    .pdf-container {
+      padding-bottom: 75%; /* maintain 4:3 aspect ratio */
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .pdf-container {
+      padding-bottom: 56.25%; /* maintain 16:9 aspect ratio */
+    }
+  }
+  
